--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HTML 5 Boilerplate</title>
+    <title>The Finger Tuner</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="thumb"></div>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+    <div class="allow-access" onclick="start()">Tap the screen to allow microphone access</div>
+    <img class="thumb hidden" src="./frames/0000.png"></div>
     <script src="https://cdn.jsdelivr.net/npm/aubiojs@0.1.1/build/aubio.min.js"></script>
     <script src="tuner.js"></script>
     <script src="index.js"></script>
