--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   </head>
   <body>
     <div class="allow-access" onclick="start()">Tap the screen to allow microphone access</div>
-    <img class="thumb hidden" src="./frames/0000.png"></div>
+    <input type="range" min="-50" max="50" value="0" class="slider" oninput="handleSlider(this.value)" step="1">
+    <img class="hand" src="./frames/0000.png"></div>
+    <div class="cents"></div>
     <script src="https://cdn.jsdelivr.net/npm/aubiojs@0.1.1/build/aubio.min.js"></script>
     <script src="tuner.js"></script>
     <script src="index.js"></script>
