--- a/index.html
+++ b/index.html
@@ -1,19 +1,27 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>The Finger Tuner</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/src/style.css">
   </head>
-  <body onclick="onClick()">
+  <body>
     <div class="allow-access">Tap the screen to allow microphone access</div>
     <!-- <input type="range" min="-50" max="50" value="0" class="slider" oninput="handleSlider(this.value)" step="1"> -->
-    <img class="hand hidden" src="./frames/0000.png"></div>
+    <img class="hand hidden" src="/public/frames/0000.png"></div>
     <div class="cents"></div>
+    <div class="note">
+      <div class="note-letter"></div>
+      <div class="note-subgroup">
+        <div class="note-accidental"></div>
+        <div class="note-octave"></div>
+      </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/aubiojs@0.1.1/build/aubio.min.js"></script>
-    <script src="tuner.js"></script>
-    <script src="index.js"></script>
+    <script src="/src/tuner.js"></script>
+    <!-- <script type="module" src="index.js"></script> -->
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
