--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/aubiojs@0.1.1/build/aubio.min.js"></script>
-    <script src="/src/tuner.js"></script>
+    <!-- <script src="/src/tuner.js"></script> -->
     <!-- <script type="module" src="index.js"></script> -->
     <script type="module" src="/src/main.js"></script>
   </body>
