--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
   <body>
     <div class="allow-access">Tap the screen to allow microphone access</div>
     <!-- <input type="range" min="-50" max="50" value="0" class="slider" oninput="handleSlider(this.value)" step="1"> -->
-    <img class="hand hidden" src="/public/frames/0000.png"></div>
-    <div class="cents"></div>
-    <div class="note">
-      <div class="note-letter"></div>
-      <div class="note-subgroup">
-        <div class="note-accidental"></div>
-        <div class="note-octave"></div>
+    <img class="hand hidden" src="/frames/0000.png"></div>
+    <div class="footer">
+      <div class="note">
+        <div class="note-letter"></div>
+        <div class="note-subgroup">
+          <div class="note-accidental"></div>
+          <div class="note-octave"></div>
+        </div>
       </div>
+      <div class="cents"></div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/aubiojs@0.1.1/build/aubio.min.js"></script>
     <!-- <script src="/src/tuner.js"></script> -->
