--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="allow-access">Tap the screen to allow microphone access</div>
-    <!-- <input type="range" min="-50" max="50" value="0" class="slider" oninput="handleSlider(this.value)" step="1"> -->
+    <!-- <input class="test-slider" type="range" min="-50" max="50" value="0" step="1"> -->
     <img class="hand hidden" src="/frames/0000.png"></div>
     <div class="footer">
       <div class="note">
