--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
       <div class="cents"></div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/aubiojs@0.1.1/build/aubio.min.js"></script>
+    <script>
+      window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+    </script>
+    <script defer src="/_vercel/insights/script.js"></script>
     <!-- <script src="/src/tuner.js"></script> -->
     <!-- <script type="module" src="index.js"></script> -->
     <script type="module" src="/src/main.js"></script>
